--- a/bulgan.html
+++ b/bulgan.html
@@ -29,23 +29,24 @@
 <!-- Showcase -->
 <div class="container">
     <div class="city-grid">
-     <article class="details">
-        <h1 class=" l-heading">Булган аймаг</h1>
-        <ul>
-            <li>Байгуулагдсан он : 1938</li>
-            <li>Газар нутаг : 49,000 км2</li>
-            <li>Хүн ам : 62,000</li>
-        </ul>
-        <h3>Тухай</h3>
-        <p>Булган аймаг нь манай орны төв хэсэгт Орхон Сэлэнгийн сав газарт орших бөгөөд нутагт нь Булганхан, Бүрэгхангай, Дулаанхан, Бүтээл, Хантай Дархан хаан зэрэг ой хөвчит уул нурууд бий. Нутгийн хойд захаар эртний төрмөлийн эриний боржин чулуу, өмнө хэсгийн үлэмж талбайд дунд ба эртний төрмөлийн эриний хурдас, дунд хэсгээр нь Дээд Пермийн ба Гуравдагч, Юрийн галавын бялхмал чулуулаг, мөн Дөрөвдөгч эриний хүрмэн чулуу их тархжээ, Дөрөвдөгч галавын үед оргилж байсан Уран тогоо, Тулга, Бүрхээр, Жалавч зэрэг унтарсан галт уулыг нь дархлан хамгаалж байна. 1967 онд Могод сумын нутагт газар хөдөлж, газар хагарч язарсан нь энэ хавийн нутгийн гадаргын хэлбэр бүрэн тогтоогүй байгаагийн гэрч юм. Булган аймгийн нутагт чулуун нүүрс, барилгын материалын баялаг бий. Булган аймгийн нутагт Сэлэнгэ, Орхон, Хануй зэрэг том голууд урсах бөгөөд Харгал, Хунт, Айрхан зэрэг нуурууд бий. Хульж, Хунт, Хануйн, Асгатын зэрэг рашаан бий, Эгийн гол дээр УЦС барих аж. Аймгийн нутгийн урд хэсгээр хээрийн хүрэн хөрс, хойд хэсгээр ойн хар шороон ба уулын, тайгын хөрс тархжээ. Аймгийн нутгийн өмнөд хэсгээр хээрийн ургамал, хойд хэсгээр ой хөвч тархжээ. Ан амьтан элбэггэй.</p>
-     </article>
 
-      <article>
-        <div class="details-img">
-            <img src="./img/bulgan1.jpg" alt="">
-            <img src="./img/bulgan2.png" alt="">
-        </div>
-     </article>
+        <article class="details">
+             <div class="city-text">
+             <h1 class=" l-heading">Булган аймаг</h1>
+             <ul>
+             <li>Байгуулагдсан он : 1938</li>
+             <li>Газар нутаг : 49,000 км2</li>
+             <li>Хүн ам : 62,000</li>
+             </ul>
+             <h3>Тухай</h3>
+             <p>Булган аймаг нь манай орны төв хэсэгт Орхон Сэлэнгийн сав газарт орших бөгөөд нутагт нь Булганхан, Бүрэгхангай, Дулаанхан, Бүтээл, Хантай Дархан хаан зэрэг ой хөвчит уул нурууд бий. Нутгийн хойд захаар эртний төрмөлийн эриний боржин чулуу, өмнө хэсгийн үлэмж талбайд дунд ба эртний төрмөлийн эриний хурдас, дунд хэсгээр нь Дээд Пермийн ба Гуравдагч, Юрийн галавын бялхмал чулуулаг, мөн Дөрөвдөгч эриний хүрмэн чулуу их тархжээ, Дөрөвдөгч галавын үед оргилж байсан Уран тогоо, Тулга, Бүрхээр, Жалавч зэрэг унтарсан галт уулыг нь дархлан хамгаалж байна. 1967 онд Могод сумын нутагт газар хөдөлж, газар хагарч язарсан нь энэ хавийн нутгийн гадаргын хэлбэр бүрэн тогтоогүй байгаагийн гэрч юм. Булган аймгийн нутагт чулуун нүүрс, барилгын материалын баялаг бий. Булган аймгийн нутагт Сэлэнгэ, Орхон, Хануй зэрэг том голууд урсах бөгөөд Харгал, Хунт, Айрхан зэрэг нуурууд бий. Хульж, Хунт, Хануйн, Асгатын зэрэг рашаан бий, Эгийн гол дээр УЦС барих аж. Аймгийн нутгийн урд хэсгээр хээрийн хүрэн хөрс, хойд хэсгээр ойн хар шороон ба уулын, тайгын хөрс тархжээ. Аймгийн нутгийн өмнөд хэсгээр хээрийн ургамал, хойд хэсгээр ой хөвч тархжээ. Ан амьтан элбэггэй.</p>
+            </div>
+            <div class="city-img">
+             <img src="./img/bulgan1.jpg" alt="">
+             <img src="./img/bulgan2.png" alt="">
+             </div> 
+        </article>
+
      </div>
 
 </div>
