--- a/newlogin.html
+++ b/newlogin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5f748870eb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="newlogin.css">
-    <title>LOgin</title>
+    <title>Login page</title>
 </head>
 <body>
     <h1 class="logo">
@@ -16,13 +16,13 @@
     </h1>
     <div class="inputBox">
         <input type="text" required="required">
-        <span>Нэр</span>
+        <span>Нэвтрэх нэр</span>
     </div>
     <div class="inputBox">
         <input type="text" required="required">
         <span>Нууц үг</span>
     </div>
-    <button  type="submit" class="btn">Нэвтрэх</button>
+    <a href="index.html"><button  type="submit" class="btn">Нэвтрэх</button> </a>
     <p class="account"><a href="newregister.html">Бүртгүүлэх</a></p>
    
     
