--- a/21 aimag/bulgan.html
+++ b/21 aimag/bulgan.html
@@ -27,7 +27,7 @@
     </div>
     
 <!-- Showcase -->
-<div class="container">
+<div class="ai-container">
     <div class="city-grid">
 
         <article class="details">
@@ -49,6 +49,16 @@
 
      </div>
 
+</div>
+
+<div class="footer">
+    <div>
+        <a href="https://www.facebook.com/munxjin.enxbayr/"><i class="fa-brands fa-facebook fa-2x"></i></a>
+    </div>
+    
+    <div>
+        Бүх эрх хуулиар хамгаалагдсан
+    </div>
 </div>
 
 
