--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="index.html"> <i class="fa-solid fa-mountain-city m"></i></a>
             </h1>
             <ul>
-                <li><a class="current" href="index.html">Холбогдох</a></li>
+                <li><a class="current" href="contact.html">Холбогдох</a></li>
                 <li><a class="current" href="newlogin.html">Нэвтрэх</a></li>
                 
             </ul>
@@ -34,10 +34,10 @@
                 <div>
                     <div>
                         <ul>
-                            <li><a href="#">Эхлэл</a></li>
-                            <li><a href="#">Бидний тухай</a></li>
-                            <li><a href="#">Үйлчилгээ</a></li>
-                            <li><a href="#">Холбоо барих</a></li>
+                            <li><a href="gadaadaylal.html">Гадаад аялал</a></li>
+                            <li><a href="#">Дотоод аялал</a></li>
+                            <li><a href="juulchin.html">Жил бүр хамгийн их жуулчин очдог орнууд</a></li>
+                            <li><a href="viz.html">Визгүй зорчих орнууд</a></li>
                         </ul>
                 </div>
             </div>
@@ -52,8 +52,8 @@
         <div class="showcase-container">
               <div class="showcase-content">
                 <a href="details.html"><div class="category category-sea">Шинэ</div></a>
-                <a href="details.html"><h1>Сүүлийн үед хамгийн их зочилсон газрууд</h1> </a>
-                <a href="article.html" class="btn ">Дэлгэрэнгүй</a>
+                <a href="details.html"><h1>Сүүлийн үед хамгийн их хүн зочилсон газрууд</h1> </a>
+                <a href="details.html" class="btn ">Дэлгэрэнгүй</a>
             </div>
         </div>
     </div>
@@ -76,8 +76,8 @@
                 </div>
             </article>
             <article class="card">
-                <div class="city category-sea">Эрдэнэт</div>
-                <a href="bulgan.html"><img src="./img/erdent.jpg" alt=""></a>
+                <a href="/21 aimag/erdenet.html"><div class="city category-sea">Эрдэнэт</div></a>
+                <a href="/21 aimag/erdenet.html"><img src="./img/erdent.jpg" alt=""></a>
             </article>
             <article class="card">
                 <div class="city category-sea">Архангай</div>
