--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div>
                         <ul>
                             <li><a href="gadaadaylal.html">Гадаад аялал</a></li>
-                            <li><a href="#">Дотоод аялал</a></li>
+                            <li><a href="dotoodaylal.html">Дотоод аялал</a></li>
                             <li><a href="juulchin.html">Жил бүр хамгийн их жуулчин очдог орнууд</a></li>
                             <li><a href="viz.html">Визгүй зорчих орнууд</a></li>
                         </ul>
