--- a/gadaadaylal.html
+++ b/gadaadaylal.html
@@ -28,40 +28,31 @@
         </div>
     </div>
 
-    <section id="ju-home-articles" >
-        <h2> Жил бүр хамгийн их жуулчин очдог орнууд</h2>
-        <div class="ju-home-container">
-            <div class="ju-article-container">
-                <article class="ju-card">
-                    <div class="city category-yellow">Франц улс</div>
-                    <img src="./img/france" alt="" > 
-                    <p>Сүүлийн жилүүдэд дэлхий даяар аялах сонирхолтой жуулчдын тоо өсч байгаа нь аялал жуулчлалын салбарт эерэг уур амьсгалыг авчраад байгаа билээ. Европын орнуудад л гэхэд 10 евро бүрийн 1 нь жуулчдаас олсон орлогод тооцогддог байна. Жил бүр хамгийн их жуулчин очдог орнууд юу вэ? Үүнийг тооцохдоо нисэх онгоцны тасалбарын борлуулалт болоод бэлэг дурсгалын худалан авалт, худалдаа хийсэн байдал зэрэг хэд хэдэн хүчин зүйлсийг хамааруулан гаргадаг байна. </p>
+    <section id="gad-home-articles" >
+        <h2> Гадаад аялал</h2>
+        <div class="gad-home-container">
+            <div class="gad-article-container">
+                <article class="gad-card">
+                    <div class="city category-yellow">Европын аялал</div>
+                    <img src="./img/europa.png" alt="" > 
+                    <p>Дэлхийн 2-р дайн дууссаны дараа олон улсын аялал жуулчлал дэлхийн өнцөг булан бүрт идэвхтэй хөгжиж эхэлснээс хойш Европ  нь аялал жуулчлалын гол бүс болжээ.Энэхүү аяллаар та Европын төдийгүй дэлхийн нийгэм, улс төр, санхүү, аялал жуулчлалын төв болсон хамгийн том улсууд болох Герман, Нидерланд, Белги, Франц, Люксенбург, улсуудаар аялна. Мөн Европын хотуудын хүний гараар бүтээсэн барилга архитектор, түүхийн гайхамшиг болох ЮНЕСКО-ийн дэлхийн соёлын өвд бүртгэгдсэн газруудыг үзэж сонирхоно. </p>
                 </article>     
-                <article class="ju-card">
-                    <div class="city category-yellow">Америкийн нэгдсэн улс</div>
-                    <img src="./img/anu" alt="" > 
-                    <p>Ширэнгэн ой мэт шилэн барилгууд дунд түм түжигнэж, бум бужигнасан Нью-Йорк, Лос Анжелас,  Лас Вегас хотоос эхлээд АНУ-д үзэх зүйл олон. Тус улсын нийт 29 мужид аялал жуулчлалын чиглэлээр ажиллагсдын тоо хамгийн өндөр байдаг. Америкийн нэгдсэн улсыг жил бүр 74.8 сая жуулчид зорьдог. Эдгээрийн ихэнх нь Мексик, Канад, Англи зэрэг орнуудаас ирдэг байна.</p>
+                <article class="gad-card">
+                    <div class="city category-yellow">Туркийн аялал</div>
+                    <img src="./img/turkaylal.png" alt="" > 
+                    <p>Ази болон Европ тивийг зааглан, Газар дундын тэнгисийн хөвөө хязгаарт орших Турк улс нь аялахад нэн тааламжтай газар билээ. Тиймдээ ч энэхүү гайхамшигт газрыг жил тутам 50 орчим сая хүн үзэхээр зорьдог байна.  Энэхүү аяллаар та  Туркийн Ривьерагийн хурдацтай хөгжиж буй аялал жуулчлалын  хот болох Анталия болон  “Хөвөн цайз” Памуккалле, эртний Хиераполис хот уруу аялж Аполло сүм, Агора болон бусад газруудаар зочилно. Мөн Ази, Европыг холбосон Босфорын хоолойгоор голоороо тусгаарлагдсан Туркийн хамгийн том хот болох Истанбул хотын түүх, соёлын дурсгалтай танилцана.</p>
                 </article> 
-                <article class="ju-card">
-                    <div class="city category-yellow">Испани улс</div>
-                    <img src="./img/spain" alt="" > 
-                    <p>Испани улсын дотоодын нийт бүтээгдэхүүний 11% нь аялал жуулчлалын салбараас бүрддэг. Жил тутам ойролцоогоор 65-70 сая жуулчид Испанийн үзэсгэлэнт газруудыг үзэхээр ирдэг. Ихэвчлэн Англи, Франц, Итали, Герман зэрэг улсын жуулчид Испанийн түүхэн хотууд болох Барселона, Мадрид зэргийг сонирхохын зэрэгцээ Испани улсын өвөрмөц, соёл заншлыг бахдан буцдаг. Тус улсын нийт 13 хот нь Юнескогийн соёлын өвд бүртгэлтэй гэдгээрээ алдартай.</p>
+                <article class="gad-card">
+                    <div class="city category-yellow">Хайнань аялал</div>
+                    <img src="./img/hainan.png" alt="" > 
+                    <p>Газрын диваажин Хайнан арлын үзэсгэлэнт Саньяа хотын аялал,Дархан цаазат газар бүхий Сармагчны арал үзэх,Атлантис усан парк,Зөөлөн, торгон элст далайн эргийн аялал,Худалаа, үйлчилгээний томоохон төвүүд,</p>
                 </article> 
-                <article class="ju-card">
-                    <div class="city category-yellow">Англи улс</div>
-                    <img src="./img/angli" alt="" > 
-                    <p>Англи улсын нийслэл Лондон хотод л гэхэд өнгөрсөн оны байдлаар 31.5 сая жуулчид зочилсон бол цаашид 2020 он гэхэд энэхүү тоо 35 хувиар өсөх магадлалтай байна. Хатан хааны төрсөн өдөр болон олимп зэрэг спортын наадмын үеэр Англи улсыг зорих жуулчдын тоо эрс өсдөг байна. Тус улс аялал жуулчлалын салбараас жил бүр 18 тэр бум долларын ашиг олдог.</p>
+                <article class="gad-card">
+                    <div class="city category-yellow">Арабын хойгийн круйз аялал</div>
+                    <img src="./img/boat.png" alt="" > 
+                    <p>5 одтой дээд зэрэглэлийн, бүх хоол багтсан Круиз усан онгоцоор Арабын хойгийн 3 улс, 4 хот буюу Катарын Доха хот, Оманы Мускат хот, АНЭУ-ын Дубай ба Абу Даби хотуудаар аялах мартагдашгүй 8 өдрийн круйз аялалдаа урьж байна. 2022 онд үйлдвэрлэгдсэн 336 метр урт, 827 өрөөтэй, 6600 зорчиг тээвэрлэх хүчин чадал бүхий аварга том Costa Toscana усан онгоцоор Араб болон Оманы хойг, Арабын тэнгисээр аялна.</p>
                 </article> 
-                <article class="ju-card">
-                    <div class="city category-yellow">Хятад улс</div>
-                    <img src="./img/hytd" alt="" > 
-                    <p>Цагаан хэрмийн эх нутаг болсон Хятад улсад Шаолины сүм, Гуангшоу усан хүрхрээ, Ариун дагшин уулс гээд үзэх газар нутаг мөн л олон. Байгаль болон соёлын өвөрмөц бүтэцтэй Хятад улсыг зорих жуулчны тоо олон. Жил бүр 55,6 сая гадны жуулчид Хятал улсад очдог. Дэлхийн худалдааны төв байгуулагдсан нь Хятад улс руу очих жуулчдыг тоог улам ихэсгэж байгаа ба 2020 он гэхэд Хятад улс аялал жуулчлалын салбараар дэлхийд тэргүүлдэг болох магадлал маш өндөр байна.</p>
-                </article>    
-                <article class="ju-card">
-                    <div class="city category-yellow">Итали улс</div>
-                    <img src="./img/itali.jpg" alt="" > 
-                    <p>Итали улс Соёлын гайхалтай төвүүд, уламжлалт хоол, загварын ордон, далайн эргийн амралтын газраа түшиглэсэн Итали улсын аялал, жуулчлалын салбар өнгөрсөн жил 45,7 тэрбум ам.долларын ашигтай ажиллажээ. Италийн 44 дурсгалыг дэлхийн соёлын өвд бүртгэсэн юм.Хятад улс Хятад улсад өнгөрсөн жил 50 сая жуулчин зочилжээ. Жуулчдын очихыг хүсдэг орны жагсаалтын дөрөвдүгээрт бичигддэг. Тус улс аялал, жуулчлалаас 40,8 тэрбум ам.долларын ашиг олжээ.</p>
-                </article>  
+               
             </div>
         </div>
     </section>
