--- a/21 aimag/arhangai.html
+++ b/21 aimag/arhangai.html
@@ -32,17 +32,20 @@
 
         <article class="ai-details">
              <div class="ai-city-text">
-             <h1 class=" l-heading">Эрдэнэт хот </h1>
+             <h1 class=" l-heading">Архангай   аймаг</h1>
              <ul>
-             <li>Байгуулагдсан он : 1974</li>
-             <li>Газар нутаг : 208.0 км2</li>
-             <li>Хүн ам :  101,976</li>
+             <li>Байгуулагдсан он : 1931</li>
+             <li>Газар нутаг : 	55,313.82 км2</li>
+             <li>Хүн ам :  95,253 </li>
              </ul>
              <h2>Тухай</h2>
-             <p>Эрдэнэт, ᠡᠷᠳᠡᠨᠢᠲᠤ — Орхон аймгийн төв, Монгол Улсын Орхон аймгийн төв, Монгол улсын Улаанбаатарын дараа орох 2 дахь том хот юм. Улаанбаатар хотоос ойролцоогоор 380км зайд орших бөгөөд засмал болон төмөр замаар нийслэл хоттой холбогдсон байдаг.</p>
+             <p>Далайн төвшнөөс дээш дунджаар 2414 метр. Хамгийн өндөр цэг нь 3539 метр өндөр Харлагтайн сарьдаг уул. Хамгийн нам дор цэг нь 1290 метр өндөр Орхон Тамирын бэлчир юм. Хойд талаараа Хөвсгөл аймагтай, зүүн талаараа Булган аймагтай, өмнө талаараа Өвөрхангай аймагтай, баруун хойд талаараа Завхан аймагтай тус тус хиллэдэг.
+
+            Дийлэнхдээ ойт хээр, тал хээр нутагтай, баруун урдуур нь Хангайн нуруу, баруун хойгуур нь түүний салбар болох Тарвагатайн нуруу оршдог ба зүүн болон төв хэсгээр тэдгээрээс эх авсан Орхон, Хануй, Тамир, Чулуут зэрэг томоохон голууд урсдаг. Энэ нутаг нь аялал жуулчлалын нэгэн чухал газар бөгөөд Өгий, Тэрхийн цагаан зэрэг нуур болон Хорго, Тайхар чулуу зэрэг галт уулын тогтцоороо олны анхаарлыг татдаг.</p>
             </div>
+            
             <div class="city-img">
-             <img src="/img/erdenet2.jpg" alt="">
+             <img src="/img/arhangais.jpg" alt="">
              </div> 
         </article>
 
