--- a/21 aimag/baynolgii.html
+++ b/21 aimag/baynolgii.html
@@ -32,17 +32,19 @@
 
         <article class="ai-details">
              <div class="ai-city-text">
-             <h1 class=" l-heading">Эрдэнэт хот </h1>
+             <h1 class=" l-heading">Баян-өлгий аймаг</h1>
              <ul>
-             <li>Байгуулагдсан он : 1974</li>
-             <li>Газар нутаг : 208.0 км2</li>
-             <li>Хүн ам :  101,976</li>
+             <li>Байгуулагдсан он : 1939</li>
+             <li>Газар нутаг : 45,704.89 км2</li>
+             <li>Хүн ам : 109,467</li>
              </ul>
              <h2>Тухай</h2>
-             <p>Эрдэнэт, ᠡᠷᠳᠡᠨᠢᠲᠤ — Орхон аймгийн төв, Монгол Улсын Орхон аймгийн төв, Монгол улсын Улаанбаатарын дараа орох 2 дахь том хот юм. Улаанбаатар хотоос ойролцоогоор 380км зайд орших бөгөөд засмал болон төмөр замаар нийслэл хоттой холбогдсон байдаг.</p>
+             <p>Баян-Өлгий (ᠪᠠᠶ᠋ᠨ ᠥᠯᠦᠭᠡᠢ) нь, Монгол Улсын аймгийн нэг юм. Аймгийн төв нь Өлгий хот бөгөөд Улаанбаатар хотоос 1636 километр зайтай. Нутаг дэвсгэрийн хэмжээ нь 45.8 мянган хавтгай дөрвөлжин километр. Хүн амын тоо 112,836. Малын тоо толгой 2021 оны дүнгээр 2,379,000. Тус аймаг нь 1940 онд байгуулагдсан. Хүн амын ихэнх нь казах үндэстнүүд бөгөөд Монгол овгийн урианхай, тува ястнууд амьдардаг.
+
+            Өндөрлөг газар оршдог учраас уур амьсгал ерөнхийдөө сэрүүн байдаг. Даян, Хотон, Хорго гэх мэт цэнгэг уст 80 гаруй нууртай. Ховд, Цагаан, Согоот, Ёлт гэх мэт 100 гаруй гол горхи, 200 гаруй булаг шандтай. Ховд гол нь 506 километр үргэлжилдэг. Толбо, Ачит нуур нь загас агнуурын нөөцтэй.</p>
             </div>
             <div class="city-img">
-             <img src="/img/erdenet2.jpg" alt="">
+             <img src="/img/byanolgii.jpg alt=">
              </div> 
         </article>
 
