--- a/21 aimag/gobialtai.html
+++ b/21 aimag/gobialtai.html
@@ -32,17 +32,17 @@
 
         <article class="ai-details">
              <div class="ai-city-text">
-             <h1 class=" l-heading">Эрдэнэт хот </h1>
+             <h1 class=" l-heading">Говь-Алтай</h1>
              <ul>
-             <li>Байгуулагдсан он : 1974</li>
-             <li>Газар нутаг : 208.0 км2</li>
-             <li>Хүн ам :  101,976</li>
+             <li>Байгуулагдсан он : 1940</li>
+             <li>Газар нутаг : 141,447.67 км2</li>
+             <li>Хүн ам : 57,328</li>
              </ul>
              <h2>Тухай</h2>
-             <p>Эрдэнэт, ᠡᠷᠳᠡᠨᠢᠲᠤ — Орхон аймгийн төв, Монгол Улсын Орхон аймгийн төв, Монгол улсын Улаанбаатарын дараа орох 2 дахь том хот юм. Улаанбаатар хотоос ойролцоогоор 380км зайд орших бөгөөд засмал болон төмөр замаар нийслэл хоттой холбогдсон байдаг.</p>
+             <p>Говь-Алтай аймаг нь монголын баруун өмнөд хэсэгт орших бөгөөд нутгийн дундуур нь Монгол Алтайн нуруу баруун хойноос зүүн урагшаа чиглэлтэйгээр нэвтлэн өнгөрнө. Сутай, Бурхан Буудай, Алагхайрхан, Ажбогд, Гичгэнэ зэрэг өндөр уул нурууд оршино. Мөн Шарга, Бигэр, Хүйс зэрэг томоохон хотгоруудад нь кайнозойн хурдас тархсан бөгөөд уулархаг нь кембрийн ба кембрийн өмнөх суурь чулуулагтай юм. Чулуун нуүрс (Зээгт), үнэт чулуу (Алтан худаг), барилгын материал зэрэг ашигт малтмал бий.Аймгийн нутгийн хойд захаар Завхан гол урсах бөгөөд Зүйл, Сагсай зэрэг адагтаа ширгэдэг гол горхи бий, Мөн Ихэс, Шарга, Тонхил зэрэг нуурууд бий. Хөнхөр зуслан, Улаанхайрхан, Аргалант зэрэг рашаан ус бий. Говь-Алтай аймаг нутаг дэвсгэрийнхээ хэмжээгээр улсдаа 2-рт орно.</p>
             </div>
             <div class="city-img">
-             <img src="/img/erdenet2.jpg" alt="">
+             <img src="/img/gobialtai.jpg" alt="">
              </div> 
         </article>
 
