--- a/21 aimag/hentii.html
+++ b/21 aimag/hentii.html
@@ -27,10 +27,10 @@
     </div>
     
 <!-- Showcase -->
-<div class="container">
-    <div class="city-grid">
+<div class="ai-container">
+    <div class="ai-city-text">
 
-        <article class="details">
+        <article class="ai-details">
              <div class="city-text">
              <h1 class=" l-heading">Хэнтий   аймаг</h1>
              <ul>
@@ -48,6 +48,16 @@
         </article>
 
      </div>
+
+     <div class="footer">
+        <div>
+            <a href="https://www.facebook.com/munxjin.enxbayr/"><i class="fa-brands fa-facebook fa-2x"></i></a>
+        </div>
+        
+        <div>
+            Бүх эрх хуулиар хамгаалагдсан
+        </div>
+    </div>
 
 </div>
 </body>
