--- a/index.html
+++ b/index.html
@@ -76,35 +76,75 @@
                 </div>
             </article>
             <article class="card">
-                <a href="/21 aimag/erdenet.html"><div class="city category-sea">Эрдэнэт</div></a>
+                <a href="/21 aimag/erdenet.html"><div class="city category-sea">Эрдэнэт хот</div></a>
                 <a href="/21 aimag/erdenet.html"><img src="./img/erdent.jpg" alt=""></a>
             </article>
             <article class="card">
                 <div class="city category-sea">Архангай</div>
-                <a href="bulgan.html"><img src="./img/arhangai.png" alt=""></a>
+                <a href="/21 aimag/arhangai.html"><img src="./img/arhangai.png" alt=""></a>
             </article>
             <article class="card">
                 <div class="city category-sea">Хөвсгөл</div>
+                <a href="/21 aimag/huwsgul.html"><img src="./img/howsgol.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Баянхонгор</div>
+                <a href="/21 aimag/bayanhongor.html"><img src="./img/baynhongor.jpeg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Баян-Өлгий</div>
+                <a href="/21 aimag/baynolgii.html"><img src="./img/baynolgii2.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Говь-Алтай</div>
+                <a href="/21 aimag/gobialtai.html"><img src="./img/gobialtai2.jpeg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">ГовьСүмбэр</div>
+                <a href="/21 aimag/gobisumber.html"><img src="./img/gobisumber.png" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Дархан-уул</div>
+                <a href="/21 aimag/darhanuul.html"><img src="./img/darhan2.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Дархан-уул</div>
                 <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Хөвсгөл</div>
+                <div class="city category-sea">Дархан-уул</div>
                 <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Хөвсгөл</div>
+                <div class="city category-sea">Дархан-уул</div>
                 <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Хөвсгөл</div>
+                <div class="city category-sea">Дархан-уул</div>
                 <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Хөвсгөл</div>
+                <div class="city category-sea">Дархан-уул</div>
                 <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Хөвсгөл</div>
+                <div class="city category-sea">Дархан-уул</div>
+                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Дархан-уул</div>
+                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Дархан-уул</div>
+                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Дархан-уул</div>
+                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Дархан-уул</div>
                 <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
             </article>
            
