--- a/index.html
+++ b/index.html
@@ -108,44 +108,48 @@
                 <a href="/21 aimag/darhanuul.html"><img src="./img/darhan2.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Дорнод</div>
+                <a href="/21 aimag/dornod.html"><img src="./img/dornod2.png" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Дорноговь</div>
+                <a href="/21 aimag/dornogobi.html"><img src="./img/dornogobi2.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Дундговь</div>
+                <a href="/21 aimag/dundgobi.html"><img src="./img/dundgobi2.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Завхан</div>
+                <a href="/21 aimag/zawhan.html"><img src="./img/zawhan1.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Өвөрхангай</div>
+                <a href="/21 aimag/oworhangai.html"><img src="./img/Oworhangai1.jpeg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Өмнөговь</div>
+                <a href="/21 aimag/omnogobi.html"><img src="./img/omongobi1.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Сүхбаатар</div>
+                <a href="/21 aimag/svhbaatar.html"><img src="./img/svhbaatar1.jpg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Сэлэнгэ</div>
+                <a href="/21 aimag/selenge.html"><img src="./img/selenge1.jpeg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Төв</div>
+                <a href="/21 aimag/tuw.html"><img src="./img/tuw2.jpeg" alt=""></a>
             </article>
             <article class="card">
-                <div class="city category-sea">Дархан-уул</div>
-                <a href="bulgan.html"><img src="./img/howsgol.jpg" alt=""></a>
+                <div class="city category-sea">Увс</div>
+                <a href="/21 aimag/uws.html"><img src="./img/uws1.jpg" alt=""></a>
+            </article>
+            <article class="card">
+                <div class="city category-sea">Ховд</div>
+                <a href="/21 aimag/howd.html"><img src="./img/howd1.jpg" alt=""></a>
             </article>
            
             
